feat: protect /auth/refresh route, now refresh token should be also provided in authorization header
